--- a/3tier-bad/bad-playbook.yml
+++ b/3tier-bad/bad-playbook.yml
@@ -15,26 +15,26 @@
 
 - name: configuration
   hosts: all
-  gather_facts: false # remove later! speeds up testing
+  gather_facts: no 
   become: true
 
   tasks:
-  - name: enable repos
-    template:
-      src: ./open_three-tier-app.repo
-      dest: /etc/yum.repos.d/open_three-tier-app.repo
-      mode: 0644
+    - name: enabling repos for open three tier app
+      template:
+        src: ./open_three-tier-app.repo
+        dest: /etc/yum.repos.d/open_three-tier-app.repo
+        mode: 0644
 
-- name: deploy haproxy
-  hosts: frontends
-  gather_facts: false # remove later! speeds up testing
-  become: true
+    - name: deploy haproxy
+      hosts: frontends
+      gather_facts: no
+      become: true
 
-  tasks:
-  - name: http
-    package:
-      name: httpie
-      state: latest
+    - name: install http
+      package:
+        name: httpie
+        state: latest
+  
   - name: install HAProxy
     yum:
       name=haproxy state=latest
